[gd_scene load_steps=16 format=3 uid="uid://c73g8ryxy8vv5"]

[ext_resource type="Script" uid="uid://cdidei78kcag4" path="res://scripts/boss/BossController.gd" id="1_trtv8"]
[ext_resource type="Script" uid="uid://b0nfn5rqrixak" path="res://scripts/boss/Hurtbox.gd" id="2_0jdgh"]
[ext_resource type="PackedScene" path="res://scenes/boss/BlackKnight3DView.tscn" id="2_knight3d"]
[ext_resource type="PackedScene" uid="uid://bvgni0b2cndxi" path="res://scenes/ui/DamageNumber.tscn" id="3_cog1j"]
[ext_resource type="Script" uid="uid://bh1vf0remp5r4" path="res://scripts/boss/BossHealth.gd" id="4_pm08e"]
[ext_resource type="PackedScene" uid="uid://cvlobx6k68egu" path="res://scenes/vfx/EnemyHitVFX.tscn" id="5_oqmyy"]
[ext_resource type="PackedScene" uid="uid://d186dmo00kqu5" path="res://scenes/vfx/EnemyCritVFX.tscn" id="6_wwfep"]
[ext_resource type="Script" uid="uid://bxkstno4wqyqf" path="res://scripts/ui/DamageNumberEmitter.gd" id="7_yn033"]
[ext_resource type="Script" uid="uid://ck6ywaqc1jaq2" path="res://scripts/boss/BossProjectileAttack.gd" id="9_5k8db"]
[ext_resource type="PackedScene" uid="uid://c7h4vkqn8p0k6" path="res://scenes/boss/BossProjectile.tscn" id="10_l1iww"]
[ext_resource type="Script" uid="uid://jo1e152jjcof" path="res://scripts/boss/BossProjectilePattern.gd" id="11_pattern"]
[ext_resource type="Script" uid="uid://bkhp43kmq7p80" path="res://scripts/boss/PhraseDisplay.gd" id="11_phrase"]
[ext_resource type="Resource" uid="uid://cko0nsvr6py50" path="res://resources/boss/world2_spiral_attack.tres" id="12_wave"]
[ext_resource type="Resource" uid="uid://bni6cbki4exff" path="res://resources/boss/world2_cross_slash.tres" id="13_burst"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvkpj"]
size = Vector2(185.4844, 330.0312)

[node name="Boss" type="StaticBody2D" groups=["boss"]]
script = ExtResource("1_trtv8")
max_hp = 1000
visual_path = NodePath("BlackKnight3DView")

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("2_0jdgh")
receiver_path = NodePath("../BossHealth")
require_group = &""

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 44)
shape = SubResource("RectangleShape2D_gvkpj")

[node name="BlackKnight3DView" parent="." instance=ExtResource("2_knight3d")]
viewport_size = Vector2i(4096, 3072)
screen_pixels = Vector2i(1536, 1024)

[node name="BossHealth" type="Node" parent="."]
script = ExtResource("4_pm08e")
max_hp = 2500
hit_vfx_scene = ExtResource("5_oqmyy")
crit_vfx_scene = ExtResource("6_wwfep")

[node name="DamageNumberEmitter" type="Node" parent="."]
script = ExtResource("7_yn033")
damage_number_scene = ExtResource("3_cog1j")
health_path = NodePath("../BossHealth")

[node name="DamageNumberEmitter2" type="Node" parent="."]
script = ExtResource("7_yn033")
damage_number_scene = ExtResource("3_cog1j")
health_path = NodePath("../BossHealth")

[node name="ProjectileSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, -100)

[node name="BossProjectileAttack" type="Node" parent="."]
script = ExtResource("9_5k8db")
projectile_scene = ExtResource("10_l1iww")
attack_patterns = Array[ExtResource("11_pattern")]([ExtResource("12_wave"), ExtResource("13_burst")])

[node name="PhraseDisplay" type="Node2D" parent="."]
position = Vector2(14, -197)
script = ExtResource("11_phrase")
